--- a/Requirements.txt
+++ b/Requirements.txt
@@ -9,8 +9,8 @@ datasets
 #openai
 #jupyterlab~=4.0
 #jupyterlab
-#jupyter-ai
-jupyter-ai == 2.7.0
+jupyter-ai
+#jupyter-ai == 2.7.0
 
 weaviate-client >= 4.6.4
 cohere >= 5.5.7
@@ -19,5 +19,6 @@ python-dotenv >= 1.0.1
 sentence-transformers >= 3.0.1
 jupyterlab >= 4.2.2
 ipywidgets >= 8.1.3
-langchain-text-splitters >= 0.2.1
+#langchain-text-splitters >= 0.2.1
+langchain-text-splitters
 ollama >= 0.3.0
